@@ -1,3 +1,13 @@
+2019-09-03  Jonathan Bedard  <jbedard@apple.com>
+
+        results.webkit.org: Increase default limit for LimitSlider
+        https://bugs.webkit.org/show_bug.cgi?id=201424
+
+        Reviewed by Aakash Jain.
+
+        * resultsdbpy/resultsdbpy/view/static/js/drawer.js:
+        (LimitSlider): Increase the default limit, make limit slider linear instead of logarithmic.
+
 2019-09-03  Antoine Quint  <graouts@apple.com>
 
         [iOS] Treat a two-finger single tap as if the user tapped with the Cmd key pressed
